// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imported-non-shape-generates-warnings: correct types, no warning types given 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`numberValue\` of type \`number\` supplied to \`C\`, expected \`string\`.
    in C",
  ],
]
`;

exports[`imported-non-shape-generates-warnings: incorrect types given 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`stringValue\` of type \`number\` supplied to \`C\`, expected \`string\`.
    in C",
  ],
]
`;

exports[`imported-non-shape-generates-warnings: no props given 1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`stringValue\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`numberValue\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`enumStringValue\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
]
`;
